JFC this was hell, changed half the dtos to IDs instead of nested objects and had to fix up all the services. Lesson learned. Also added the grading system....