@@ -1,114 +1,87 @@
 package lmsprojekat.service.universityservice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import jakarta.persistence.EntityNotFoundException;
-import lmsprojekat.dto.universitydto.FacultyDTO;
 import lmsprojekat.dto.universitydto.UniversityDTO;
+import lmsprojekat.model.Address;
 import lmsprojekat.model.university.Faculty;
 import lmsprojekat.model.university.University;
+import lmsprojekat.repository.AddressRepository;
 import lmsprojekat.repository.SoftDeleteRepository;
 import lmsprojekat.repository.universityrepo.FacultyRepository;
 import lmsprojekat.repository.universityrepo.UniversityRepository;
 import lmsprojekat.service.AbstractCrudService;
-import lmsprojekat.service.AddressService;
 
 @Service
 public class UniversityService extends AbstractCrudService<UniversityDTO, University, Long> {
 
-    private final UniversityRepository universityRepository;
-    private final FacultyRepository facultyRepository;
-    private final FacultyService facultyService;
-    private final AddressService addressService;
+	private final UniversityRepository universityRepository;
+	private final FacultyRepository facultyRepository;
+	private final AddressRepository addressRepository;
 
-    public UniversityService(UniversityRepository universityRepository,
-                             FacultyRepository facultyRepository,
-                             FacultyService facultyService,
-                             AddressService addressService) {
-        this.universityRepository = universityRepository;
-        this.facultyRepository = facultyRepository;
-        this.facultyService = facultyService;
-        this.addressService = addressService;
-    }
+	public UniversityService(UniversityRepository universityRepository, FacultyRepository facultyRepository,
+			AddressRepository addressRepository) {
+		this.universityRepository = universityRepository;
+		this.facultyRepository = facultyRepository;
+		this.addressRepository = addressRepository;
+	}
 
-    @Override
-    protected SoftDeleteRepository<University, Long> getRepository() {
-        return universityRepository;
-    }
+	@Override
+	protected SoftDeleteRepository<University, Long> getRepository() {
+		return universityRepository;
+	}
 
-    @Override
-    protected UniversityDTO toDTO(University entity) {
-        List<FacultyDTO> facultyDTOs = entity.getFaculties() != null
-                ? entity.getFaculties().stream()
-                        .map(facultyService::toDTO)
-                        .collect(Collectors.toList())
-                : null;
+	@Override
+	protected UniversityDTO toDTO(University entity) {
+		List<Long> facultyIds = entity.getFaculties() != null
+				? entity.getFaculties().stream().map(Faculty::getId).toList()
+				: List.of();
 
-        return new UniversityDTO(
-                entity.getId(),
-                entity.getName(),
-                entity.getEstablishmentDate(),
-                facultyDTOs,
-                entity.getAddresses() != null
-                        ? entity.getAddresses().stream()
-                                .map(addressService::toDTO)
-                                .collect(Collectors.toList())
-                        : null
-        );
-    }
+		List<Long> addressIds = entity.getAddresses() != null
+				? entity.getAddresses().stream().map(Address::getId).toList()
+				: List.of();
 
-    @Override
-    protected University toEntity(UniversityDTO dto) {
-        List<Faculty> faculties = null;
-        if (dto.getFaculties() != null) {
-            faculties = dto.getFaculties().stream()
-                    .map(facultyDTO -> {
-                        if (facultyDTO.getId() == null) {
-                            throw new IllegalArgumentException("Faculty ID cannot be null when converting UniversityDTO to University entity.");
-                        }
-                        return facultyRepository.findById(facultyDTO.getId())
-                                .orElseThrow(() -> new EntityNotFoundException("Faculty not found with id: " + facultyDTO.getId()));
-                    })
-                    .collect(Collectors.toList());
-        }
+		return new UniversityDTO(entity.getId(), entity.getName(), entity.getEstablishmentDate(), facultyIds,
+				addressIds);
+	}
 
-        return new University(
-                dto.getId(),
-                dto.getName(),
-                dto.getEstablishmentDate(),
-                faculties,
-                dto.getAddresses() != null
-                        ? dto.getAddresses().stream()
-                                .map(addressService::toEntity)
-                                .collect(Collectors.toList())
-                        : null
-        );
-    }
+	@Override
+	protected University toEntity(UniversityDTO dto) {
+		List<Faculty> faculties = dto.getFacultyIds() != null ? dto.getFacultyIds().stream()
+				.map(id -> facultyRepository.findById(id)
+						.orElseThrow(() -> new EntityNotFoundException("Faculty not found with id: " + id)))
+				.toList() : List.of();
 
-    @Override
-    protected void updateEntity(University entity, UniversityDTO dto) {
-        entity.setName(dto.getName());
-        entity.setEstablishmentDate(dto.getEstablishmentDate());
+		List<Address> addresses = dto.getAddressIds() != null ? dto.getAddressIds().stream()
+				.map(id -> addressRepository.findById(id)
+						.orElseThrow(() -> new EntityNotFoundException("Address not found with id: " + id)))
+				.toList() : List.of();
 
-        if (dto.getFaculties() != null) {
-            List<Faculty> faculties = dto.getFaculties().stream()
-                    .map(facultyDTO -> {
-                        if (facultyDTO.getId() == null) {
-                            throw new IllegalArgumentException("Faculty ID cannot be null for update.");
-                        }
-                        return facultyRepository.findById(facultyDTO.getId())
-                                .orElseThrow(() -> new EntityNotFoundException("Faculty not found with id: " + facultyDTO.getId()));
-                    }).collect(Collectors.toList());
-            entity.setFaculties(faculties);
-        }
+		return new University(dto.getId(), dto.getName(), dto.getEstablishmentDate(), faculties, addresses);
+	}
 
-        if (dto.getAddresses() != null) {
-            entity.setAddresses(dto.getAddresses().stream()
-                    .map(addressService::toEntity)
-                    .collect(Collectors.toList()));
-        }
-    }
+	@Override
+	protected void updateEntity(University entity, UniversityDTO dto) {
+		entity.setName(dto.getName());
+		entity.setEstablishmentDate(dto.getEstablishmentDate());
+
+		if (dto.getFacultyIds() != null) {
+			List<Faculty> faculties = dto.getFacultyIds().stream()
+					.map(id -> facultyRepository.findById(id)
+							.orElseThrow(() -> new EntityNotFoundException("Faculty not found with id: " + id)))
+					.toList();
+			entity.setFaculties(faculties);
+		}
+
+		if (dto.getAddressIds() != null) {
+			List<Address> addresses = dto.getAddressIds().stream()
+					.map(id -> addressRepository.findById(id)
+							.orElseThrow(() -> new EntityNotFoundException("Address not found with id: " + id)))
+					.toList();
+			entity.setAddresses(addresses);
+		}
+	}
 }
